syntax="proto3";

option java_multiple_files=true;
option java_package="com.cipek.grpc.model.proto";

message BalanceCheckRequest {
  int32 account_number = 1;
}

message Balance {
  int32 amount = 1;
}

message WithdrawalRequest {
  int32 account_number = 1;
  int32 amount = 2;
}

message Money {
  int32 amount = 1;
}

message DepositRequest {
  int32 account_number = 1;
  int32 amount = 2;
}

service BankService {
  //Unary
  rpc getBalance(BalanceCheckRequest) returns (Balance);
  //Server-Side-Streaming
  rpc withdrawal(WithdrawalRequest) returns (stream Money);
  //client-Side-Streaming
  rpc deposit(stream DepositRequest) returns (Balance);
}